examples/diagnostics/1247-diagnostics-anon-struct-literal-limits.sx
// An untyped `.{ }` literal cannot MIX positional and named elements —
// the self-typing rule (aggregate ladder Step 1/2) is all-or-none:
// `.{ 1, 2 }` mints positional fields, `.{ x = 1 }` named ones; a mix
// has no coherent shape. Name all elements or none.

#import "modules/std.sx";

main :: () -> i64 {
    m := .{ 1, y = 2 };        // error: mixed positional and named
    print("{}\n", m);
    return 0;
}
